tests/baselines/reference/directReferenceToUndefined.errors.txt
directReferenceToUndefined.ts(1,8): error TS2304: Cannot find name 'Undefined'.


==== directReferenceToUndefined.ts (1 errors) ====
    var x: Undefined;
           ~~~~~~~~~
!!! error TS2304: Cannot find name 'Undefined'.
    var y = undefined;